hphp/test/zend/bad/ext/mysqli/tests/bug44897.php.skipif
<?php
require_once('skipif.inc');

if (!stristr(mysqli_get_client_info(), 'mysqlnd'))
	die("skip: only available in mysqlnd");

require_once('skipifconnectfailure.inc');
require_once('connect.inc');

if (!$link = my_mysqli_connect($host, $user, $passwd, $db, $port, $socket)) {
	die(sprintf('skip Cannot connect to MySQL, [%d] %s.', mysqli_connect_errno(), mysqli_connect_error()));
}
if (mysqli_get_server_version($link) <= 50000) {
	die(sprintf('skip Needs MySQL 5.0+, found version %d.', mysqli_get_server_version($link)));
}
?>